--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Quantum Computing - Software development</title>
+  <title>Quantum Computing</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,7 +13,7 @@
 <script>
   window.$docsify = {
     loadSidebar: true,
-    name: 'Quantum Computing - Software development',
+    name: 'Quantum Computing',
     coverpage: true,
     repo: '',
     search: {
