double-slit experiment

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <script>
   window.$docsify = {
     loadSidebar: true,
-    name: 'Quantum Computing',
     coverpage: true,
     repo: '',
     search: {
@@ -34,7 +33,7 @@
       hideOtherSidebarContent: false, // whether or not to hide other sidebar content
       // To avoid search index collision
       // between multiple websites under the same domain
-      namespace: 'sd19w2-test',
+      namespace: 'sd19-quantum-computing',
     },
   }
 </script>
