--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.min.css" integrity="sha384-dbVIfZGuN1Yq7/1Ocstc1lUEm+AT+/rCkibIcC/OmWo5f0EA48Vf8CytHzGrSwbQ" crossorigin="anonymous">
 </head>
 <body>
 <div id="app"></div>
@@ -17,9 +18,7 @@
     repo: '',
     search: {
       maxAge: 0, // Expiration time, the default one day
-      paths: [
-        '/', // => /README.md
-      ], // or 'auto'
+      paths: 'auto', // or 'auto'
       // Localization
       placeholder: {
         '/': 'Type to search'
@@ -29,14 +28,37 @@
         '/': 'No Results'
       },
       // Headline depth, 1 - 6
-      depth: 2,
+      depth: 5,
       hideOtherSidebarContent: false, // whether or not to hide other sidebar content
       // To avoid search index collision
       // between multiple websites under the same domain
-      namespace: 'sd19-quantum-computing',
+      namespace: 'quantum-computing',
+      plugins: [
+        function (hook) {
+          hook.beforeEach(function (content) {
+            return content.replace(/\$\$([\s\S]*?)\$\$/g, function (m, code) {
+              return katex.renderToString(code.trim())
+            })
+          })
+        }
+      ]
     },
   }
 </script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "HTML-CSS": { availableFonts: ["TeX"] }
+  });
+</script>
+<script src="//cdn.bootcss.com/mathjax/2.6.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="//unpkg.com/katex/dist/katex.min.js"></script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
